--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@ layout: default
 <h2>About me</h2>
 
 <div class="intro">
-  <img class="image" align="right" src="{{ site.author.avatar | prepend: "/images/" | relative_url }}" alt="Profile picture">
   <p>
-    My name is Paul Pritz and I am currently studying towards a PhD in Computer Science at Imperial College London. 
-    My research is predominantly in Reinforcement Learning, but I have also worked on a number of projects related to blockchain technology.
-    Prior to starting my PhD, I completed a MSc in Computer Science at Imperial College London and a BSc in Economics and Management at King's College London.
+    I am Paul, a London-based software engineer and researcher, working on web3
+    payment infrastructure. Previously, I completed a PhD in Computer Science at
+    <a href="https://www.imperial.ac.uk">Imperial College London</a>, where my
+    research focused on the intersection of representation and reinforcement
+    learning, supervised by
+    <a href="https://www.commsp.ee.ic.ac.uk/~kkleung/">Prof. Kin Leung</a>.
   </p>
-
 
   <h2>Contact information</h2>
   <dl class="inline">
@@ -19,14 +20,23 @@ layout: default
     <dd>{{ site.author.email }}</dd>
 
     <dt><i class="fa fa-github"></i></dt>
-    <dd><a href="https://github.com/{{ site.author.github_username }}">GitHub</a></dd>
+    <dd>
+      <a href="https://github.com/{{ site.author.github_username }}">GitHub</a>
+    </dd>
 
     <dt><i class="fa fa-linkedin"></i></dt>
-    <dd><a href="https://www.linkedin.com/in/{{ site.author.linkedin_username }}/">LinkedIn</a></dd>
+    <dd>
+      <a href="https://www.linkedin.com/in/{{ site.author.linkedin_username }}/"
+        >LinkedIn</a
+      >
+    </dd>
 
     <dt><i class="fa fa-graduation-cap"></i></dt>
-    <dd><a href="https://scholar.google.com/citations?user={{ site.author.google_scholar_username }}">Google Scholar</a></dd>
-
-
+    <dd>
+      <a
+        href="https://scholar.google.com/citations?user={{ site.author.google_scholar_username }}"
+        >Google Scholar</a
+      >
+    </dd>
   </dl>
 </div>
