--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@ layout: default
       <a href="https://github.com/{{ site.author.github_username }}">GitHub</a>
     </dd>
 
+    <dt><i class="fa fa-twitter"></i></dt>
+    <dd>
+      <a href="https://twitter.com/{{ site.author.twitter_username }}"
+        >@{{ site.author.twitter_username }}</a
+      >
+    </dd>
+
     <dt><i class="fa fa-linkedin"></i></dt>
     <dd>
       <a href="https://www.linkedin.com/in/{{ site.author.linkedin_username }}/"
