--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@ layout: default
 
 <div class="intro">
   <p>
-    I am Paul, a London-based software engineer and researcher, working on web3
-    payment infrastructure. Previously, I completed a PhD in Computer Science at
-    <a href="https://www.imperial.ac.uk">Imperial College London</a>, where my
-    research focused on the intersection of representation and reinforcement
-    learning, supervised by
+    I'm Paul, a software engineer and researcher based in London. I work on web3
+    payment infrastructure and teach Principles of Distributed Ledgers at
+    <a href="https://www.imperial.ac.uk">Imperial College London</a>. I've
+    previously worked on the DeFi protocols Mero and TLX. I did my PhD in
+    Computer Science at Imperial, on representation and reinforcement learning,
+    under
     <a href="https://www.commsp.ee.ic.ac.uk/~kkleung/">Prof. Kin Leung</a>.
   </p>
 
